Bug 461235 - "Assertion failure: pos == GET_UINT16(pc)" decompiling function with array comprehension (r=mrbkap).